--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>2.9.9</version>
         </dependency>
         <dependency>
+            <groupId>ch.obermuhlner</groupId>
+            <artifactId>big-math</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.9.9</version>
